cleaning code and fix design styling bug

--- a/app/src/main/res/layout/activity_detail_post.xml
+++ b/app/src/main/res/layout/activity_detail_post.xml
@@ -127,7 +127,7 @@
                 android:id="@+id/product_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="170dp"
+                android:layout_marginTop="30dp"
                 android:fontFamily="@font/poppins_bold"
                 android:justificationMode="inter_word"
                 android:text="@string/product_title"
@@ -179,18 +179,18 @@
     <View
         android:id="@+id/loadingView"
         android:layout_width="match_parent"
-        android:elevation="10dp"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:visibility="visible" />
+        android:elevation="10dp"
+        android:visibility="invisible" />
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:elevation="20dp"
         android:layout_gravity="center"
+        android:elevation="20dp"
         android:indeterminate="true"
-        tools:visibility="visible" />
+        tools:visibility="invisible" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
